syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_package = "com.tometrics.api.services.protos";
option java_multiple_files = true;

enum ServiceType {
  SERVICEDISCOVERY = 0;
  CRONJOB = 1;
  EMAIL = 2;
  GARDEN = 3;
  SOCIALFEED = 4;
  SOCIALGRAPH = 5;
  USER = 6;
  MEDIA = 7;
}

message ServiceInfo {
  string prefix = 1;
  string host = 2;
  int32 port = 3;
  ServiceType type = 4;
}

message GetServiceInfoRequest {
  ServiceType serviceType = 1;
}

message GetServiceInfoResponse {
  ServiceInfo serviceInfo = 1;
}

service ServiceDiscoveryGrpcService {
  rpc register(ServiceInfo) returns (google.protobuf.Empty);
  rpc get(GetServiceInfoRequest) returns (GetServiceInfoResponse);
}